Ajouts des éléments principale dans la navigation

--- a/Index.html
+++ b/Index.html
@@ -28,11 +28,13 @@
                 <a href="javascript:void(0)" id="btn--close" onclick="closeNav()">&times;</a>
 
                 <ul class="nav--liste">
-                    <li class="nav--element"> <a href="autrepage.html" onclick="redirection(event)">Mon premier
-                            choix</a> </li>
-                    <li class="nav--element"> <a href="index.html" onclick="redirection(event)">Ma deuxième option</a>
+                    <li class="nav--element"> <a href="#" onclick="redirection(event)">Les Plats</a> </li>
+                    <li class="nav--element"> <a href="#" onclick="redirection(event)">Les Desserts</a>
                     </li>
-                    <li class="nav--element"> <a href="#">Et ma dernière option</a> </li>
+                    <li class="nav--element"> <a href="#">Les Tables d'Hôtes</a> </li>
+                    <li class="nav--element"> <a href="#">Les Entrées</a> </li>
+                    <li class="nav--element"> <a href="#">La Cave à Vins</a> </li>
+                    <li class="nav--element"><a href="#"> FR </a><a href="#"> ENG</a></li>
                 </ul>
             </nav>
         </header>
