Remise Alpha, ajout bouton au header pour reserver.

--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,7 @@
 
             <!-- Bouton de l'ouverture du menu rétractable -->
             <figure>
+                <a class="btn-secondaire reserverPrincipal" href="#">Réservez Maintenant</a>
                 <img class="header--img" src="Assets/images/placeholder.png" alt="ImageCarroussel">
                 <img class="logo" src="Assets/images/Fichier 2.png" alt="Logo Rives Boréals">
                 <svg id='burger--menu' viewBox="0 0 100 80" width="40" height="40" onclick="openNav()">
